<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rounded_corner"
    android:elevation="1dp">

    <ImageView
        android:id="@+id/iv_home_news"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/desc_news_picture"
        android:src="@drawable/ic_sample_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_home_news_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/news_name"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_home_news" />

    <View
        android:id="@+id/view_line1"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_home_news_name"
        app:layout_constraintTop_toTopOf="@+id/tv_home_news_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home_news_name" />

    <TextView
        android:id="@+id/tv_home_news_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/news_author"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@+id/view_line1"
        app:layout_constraintBottom_toBottomOf="@+id/iv_home_news"
        app:layout_constraintTop_toTopOf="@+id/view_line1"/>

    <TextView
        android:id="@+id/tv_home_news_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:text="@string/news_date"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_home_news"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tv_home_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/news_title"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_news_date"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_home_news_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/news_description"
        android:textStyle="italic"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_news_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_home_news_see_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:text="@string/news_see_more"
        android:textAlignment="textEnd"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_home_news_see_more"
        app:layout_constraintBottom_toBottomOf="@+id/iv_home_news_see_more"
        app:layout_constraintEnd_toStartOf="@+id/iv_home_news_see_more"/>

    <ImageView
        android:id="@+id/iv_home_news_see_more"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_see_more"
        android:src="@drawable/ic_arrow_forward"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_news_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>